--- a/apfel.css
+++ b/apfel.css
@@ -79,7 +79,7 @@ button:hover {
   margin-top: 1rem;
 }
 
-.wrapper video {
+.wrapper iframe {
   display: block;
   width: 100%;
   max-height: 60vh;
